add agent configuration

--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -5,3 +5,9 @@
     name: puppet-agent
     state: present
     update_cache: yes
+
+- name: Starting agent
+  service:
+    name: "{{ puppet_agent_service_name }}"
+    state: started
+    enabled: true
