--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,7 @@
 
 - include: install.debian.yml
   when: ansible_os_family == "Debian"
+  tags: [ puppet, puppet-agent ]
+
+- include: configure.yml
+  tags: [ puppet, puppet-agent, puppet-configure ]
